--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"scripts": {
 		"dev": "dotenv -e .env -- tsx watch src/index.ts",
+		"build": "tsc",
 		"start": "node dist/index.js",
 		"typecheck": "tsc --noEmit --incremental false"
 	},
