use esbuild for bundling the project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
 		"baseUrl": ".",
 		"outDir": "dist",
 		"target": "ESNext",
-		"module": "CommonJS",
-		"moduleResolution": "node",
+		"module": "ESNext",
+		"moduleResolution": "Bundler",
 		"moduleDetection": "force",
 		"esModuleInterop": true,
 		"skipLibCheck": true,
