--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-	"type": "module",
 	"scripts": {
 		"dev": "dotenv -e .env -- tsx watch src/index.ts",
-		"build": "tsc",
+		"build": "esbuild src/index.ts --bundle --platform=node --packages=external --outdir=dist",
 		"start": "node dist/index.js",
 		"typecheck": "tsc --noEmit --incremental false"
 	},
@@ -17,6 +16,7 @@
 	"devDependencies": {
 		"@types/node": "^20.12.7",
 		"dotenv-cli": "^8.0.0",
+		"esbuild": "^0.25.4",
 		"ts-node": "^10.9.2",
 		"tsx": "^4.7.2",
 		"typescript": "^5.4.5"
